# hide-my-js

./: .gitignore  Cargo.toml  LICENSE  README.md
frontend/: Cargo.toml
frontend/src/: app.rs  lib.rs  main.rs
src/: lib.rs  main.rs  passes.rs  utils.rs
src/passes/: control_flow.rs  dead_code.rs  numeric.rs  opaque_predicates.rs  remove_comments.rs  renaming.rs  string.rs
src/utils/: identifier.rs
tests/: code_flow.rs  dead_code.rs  numeric.rs  renaming.rs  string.rs  test_all_passes.rs  test_full_passes.rs  variable_renaming.rs
